<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/update_or_delete_item_here"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/namaProdukUpdateDeleteActivityET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/nama_produks"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/merkProdukUpdateDeleteActivityET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/merk_produks"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/namaProdukUpdateDeleteActivityET"
        app:layout_constraintStart_toStartOf="@+id/namaProdukUpdateDeleteActivityET"
        app:layout_constraintTop_toBottomOf="@+id/namaProdukUpdateDeleteActivityET" />

    <EditText
        android:id="@+id/hargaProdukUpdateDeleteActivityET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/harga_produks"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/merkProdukUpdateDeleteActivityET"
        app:layout_constraintStart_toStartOf="@+id/merkProdukUpdateDeleteActivityET"
        app:layout_constraintTop_toBottomOf="@+id/merkProdukUpdateDeleteActivityET" />

<!--    <com.jaredrummler.materialspinner.MaterialSpinner-->
<!--        android:id="@+id/jenisProdukUpdateDeleteActivityMS"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/hargaProdukUpdateDeleteActivityET"-->
<!--        app:layout_constraintStart_toStartOf="@+id/hargaProdukUpdateDeleteActivityET"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/hargaProdukUpdateDeleteActivityET"-->
<!--        app:ms_background_color="#88FFFFFF" />-->

    <Button
        android:id="@+id/deleteProdukAddItemBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/hargaProdukUpdateDeleteActivityET"
        app:layout_constraintTop_toBottomOf="@+id/hargaProdukUpdateDeleteActivityET" />

    <Button
        android:id="@+id/updateProdukAddItemBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/hargaProdukUpdateDeleteActivityET"
        app:layout_constraintTop_toBottomOf="@+id/hargaProdukUpdateDeleteActivityET" />




</androidx.constraintlayout.widget.ConstraintLayout>