<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/namaProdukAddItemET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/nama_produks"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/merkProdukAddItemET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/merk_produks"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/namaProdukAddItemET"
        app:layout_constraintStart_toStartOf="@+id/namaProdukAddItemET"
        app:layout_constraintTop_toBottomOf="@+id/namaProdukAddItemET" />

    <EditText
        android:id="@+id/hargaProdukAddItemET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/harga_produks"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/merkProdukAddItemET"
        app:layout_constraintStart_toStartOf="@+id/merkProdukAddItemET"
        app:layout_constraintTop_toBottomOf="@+id/merkProdukAddItemET" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/jenisProdukAddItemMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/hargaProdukAddItemET"
        app:layout_constraintStart_toStartOf="@+id/hargaProdukAddItemET"
        app:layout_constraintTop_toBottomOf="@+id/hargaProdukAddItemET"
        app:ms_background_color="#88FFFFFF" />



</androidx.constraintlayout.widget.ConstraintLayout>